<resources>
    <string name="app_name">ViCON</string>
    <string name="view_all">Search For Student</string>
    <string name="add_new">Add New Student</string>
    <string name="studentname">Student Name</string>
    <string name="scontactno">Student ContactNo</string>
    <string name="parentname">Parent Name</string>
    <string name="pcontactno">Parent ContactNo</string>
    <string name="update">Update</string>
    <string name="sidnumber1">ID NUMBER</string>
    <string name="delete">Delete</string>
    <string name="sidnumber">ID NUMBER</string>
    <string name="add">Add</string>
    <string name="CallStudent">Call Student</string>
    <string name="CallParent">Call Parent</string>
    <string name="SmsStudent">SMS Student</string>
    <string name="SmsParent">SMS Parent</string>
    <string name="hint_dob">Enter Age</string>
    <string name="hint_password">Password</string>
    <string name="Logout">Logout</string>
    <string name="hint_email">Email</string>
    <string name="hint_gender">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="UpdateStudent">UPDATE STUDENT DATA</string>
    <string name="UI">New UI</string>
    <string name="btn_sign_up">Register !!</string>
    <string name="aboutkirg">The Kirg Technologies is a young technical startup initiated by the students of CMRIT who are a diverse group entrepreneurial people working together to create a better way,pioneering in the fields of Artificial Intelligence,Web Designing and Development, Mobile Application Development. The Kirg Technologies is a next-generation technology company that helps enterprises re-imagine their businesses for the digital age. At KIRG,passion and innovation is not just another word, it’s part of our organizational heritage,providing the Best-of-breed technology solutions.For more Information Check Our Website.</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_required">Valid Input Required</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="err_msg_password">Enter a Password</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">Don\'t have an account? Register Here!!</string>
    <string name="btn_link_login">Already have an account Login ?</string>
    <string name="KirgTechnologies">© Kirg Technologies</string>
    <string name="btn_addstudent">Add Student</string>
    <string name="designed">THE KIRG TECHNOLOGIES</string>
    <string name="title_activity_shivaram">Shivaram</string>
</resources>
