<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_remote_my_sql"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kirg.vicon.RemoteMySQLActivity">

    <Button
        android:id="@+id/viewAllBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/black"
        android:text="@string/view_all" />

    <Button
        android:id="@+id/addNewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/add_new" />.
    <Button
        android:id="@+id/Update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UpdateStudent" />.
    <Button
        android:id="@+id/UI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UI" />
    <Button
        android:id="@+id/Logout"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Logout" />

</LinearLayout>
