<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/sidnumber" />
        <EditText
            android:layout_width="0dp"
            android:id="@+id/txtstudentIDUpdate"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ems="10"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/studentname" />

            <EditText
                android:layout_width="0dp"
                android:id="@+id/txtStudentNameUpdate"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/scontactno" />

            <EditText
                android:layout_width="0dp"
                android:id="@+id/txtscontactnoUpdate"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/parentname" />

            <EditText
                android:id="@+id/txtparentnameUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10sp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.25"
                android:text="@string/pcontactno" />


            <EditText
                android:id="@+id/txtpcontactnoUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:textColor="@color/colorPrimary"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/CallStudent"
        android:layout_weight="0.50"
        android:id="@+id/btnCallStudent"
        android:drawableLeft="@drawable/call"/>

        <Button
            android:id="@+id/btnCallParent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/CallParent"
            android:drawableLeft="@drawable/call"/>
    </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal"/>
    </LinearLayout>
</ScrollView>
